src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>产品线</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>综合检查台</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemPriceTotal__c</fullName>
        <formula>ListPrice  *    Quantity</formula>
        <label>系统基准价总价（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>chance__c</referenceTo>
        <relationshipLabel>业务机会产品</relationshipLabel>
        <relationshipName>Ag7S</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpzje__c</fullName>
        <formula>Quantity * UnitPrice</formula>
        <label>预计成交总价（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>业务机会产品</relationshipLabel>
        <relationshipName>sCiD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fee__c</fullName>
        <label>金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>序号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>数量（自定义）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品（技术）</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>业务机会产品</relationshipLabel>
        <relationshipName>GzFV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>totalfee__c</fullName>
        <formula>TEXT(fee__c  *  number__c)</formula>
        <label>#总金额</label>
        <type>Text</type>
    </fields>
</CustomObject>